Feat/i want to duplicate a stack (#110)
* feat(duplication): copy main relations

* fix(stack): duplicate links

* feat(stack): duplicate in front

* feat(stack): remove print
