# front/src/services/entities/Stack.entity.ts
@@ -9,7 +9,8 @@ const StackEntity = {
   board: async (id: string): Promise<AxiosResponse<IBoard>> => await axios.get(`/stacks/${id}/board`),
   create: async (stack: IStackCreate): Promise<AxiosResponse<IStack>> => await axios.post('/stacks', stack),
   update: async (stack: IStack): Promise<AxiosResponse<IStack>> => await axios.put(`/stacks/${stack.id}`, stack),
-  delete: async (id: string): Promise<AxiosResponse> => await axios.delete(`/stacks/${id}`)
+  delete: async (id: string): Promise<AxiosResponse> => await axios.delete(`/stacks/${id}`),
+  duplicate: async (id: string): Promise<AxiosResponse<IStack>> => await axios.post(`/stacks/${id}/duplicate`)
 }
 
 export default StackEntity
